# 2025-p1-BrendanSiah

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
